--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,82 +7,116 @@
     android:background="#3D2B1F"
     android:padding="16dp">
 
-    <!-- Title -->
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sample Game"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_gravity="center"
-        android:paddingBottom="20dp"
-        android:fontFamily="@font/retro_font" />
-
-    <!-- Torch Decorations and Buttons in a Horizontal Layout -->
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_width="400dp"
+        android:layout_height="350dp"
+        android:padding="10dp"
+        android:background="@drawable/dialog_background"
+        android:orientation="vertical"
         android:gravity="center">
+        <!-- Title -->
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CODEX"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/irish"
+            android:layout_marginBottom="10dp"
+            android:textSize="50sp"
+            android:layout_gravity="center"
+            />
 
-        <!-- Left Torch Image -->
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="64dp"
-            android:src="@drawable/button_background"
-            android:contentDescription="Torch Left"
-            android:layout_gravity="center" />
-
-        <!-- Button List -->
+        <!-- Torch Decorations and Buttons in a Horizontal Layout -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:orientation="horizontal"
             android:gravity="center">
-
-            <!-- New Run Button -->
-            <Button
-                android:id="@+id/newRunButton"
-                android:layout_width="200dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="new run"
-                android:background="@drawable/button_background"
-                android:textColor="@android:color/white"
-                android:layout_marginBottom="12dp"
-                android:textStyle="bold"/>
+                android:padding="10dp"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/torch1"
+                    android:layout_width="32dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_height="64dp"
+                    android:src="@drawable/torch"
+                    android:contentDescription="Torch Left"
+                    android:layout_gravity="top" />
+                <ImageView
+                    android:id="@+id/torch3"
+                    android:layout_width="32dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_height="64dp"
+                    android:src="@drawable/torch"
+                    android:contentDescription="Torch Left"
+                    android:layout_gravity="bottom" />
 
-            <!-- Continue Button -->
-            <Button
-                android:id="@+id/continueButton"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="continue"
-                android:background="@drawable/button_background"
-                android:textColor="@android:color/white"
-                android:layout_marginBottom="12dp"
-                android:textStyle="bold"/>
+            </LinearLayout>
+            <!-- Left Torch Image -->
 
-            <!-- Exit Button -->
-            <Button
-                android:id="@+id/exitButton"
-                android:layout_width="200dp"
+            <!-- Button List -->
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="exit"
-                android:background="@drawable/button_background"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"/>
+                android:orientation="vertical"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:gravity="center">
+
+                <!-- New Run Button -->
+                <ImageView
+                    android:id="@+id/newRunButton"
+                    android:layout_width="200dp"
+                    android:scaleType="fitXY"
+                    android:layout_height="70dp"
+                    android:src="@drawable/newrun" />
+                <!-- Continue Button -->
+                <ImageView
+                    android:id="@+id/continueButton"
+                    android:layout_width="200dp"
+                    android:scaleType="fitXY"
+                    android:layout_height="70dp"
+                    android:src="@drawable/cont" />
+
+                <!-- Exit Button -->
+                <ImageView
+                    android:id="@+id/exitButton"
+                    android:layout_width="200dp"
+                    android:scaleType="fitXY"
+                    android:layout_height="70dp"
+                    android:src="@drawable/exit" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/torch4"
+                    android:layout_width="32dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_height="64dp"
+                    android:src="@drawable/torch"
+                    android:contentDescription="Torch Left"
+                    android:layout_gravity="top" />
+                <ImageView
+                    android:id="@+id/torch2"
+                    android:layout_width="32dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_height="64dp"
+                    android:src="@drawable/torch"
+                    android:contentDescription="Torch Left"
+                    android:layout_gravity="bottom" />
+
+            </LinearLayout>
         </LinearLayout>
 
-        <!-- Right Torch Image -->
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="64dp"
-            android:src="@drawable/button_background"
-            android:contentDescription="Torch Right"
-            android:layout_gravity="center" />
     </LinearLayout>
+
 </LinearLayout>
