--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,4 +9,13 @@
     </style>
 
     <style name="Theme.FightingGame" parent="Base.Theme.FightingGame" />
+    <!-- res/values/styles.xml -->
+
+        <style name="CustomAlertDialogTheme" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+            <!-- Customize title text color -->
+            <item name="android:textColorPrimary">#FFFFFF</item>
+            <!-- Customize message text color -->
+            <item name="android:textColor">#FFFFFF</item>
+            <!-- Customize button text color -->
+        </style>
 </resources>
