--- a/app/src/main/res/layout/item_trivia_review.xml
+++ b/app/src/main/res/layout/item_trivia_review.xml
@@ -1,53 +1,90 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/dialog_background"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp">
+    android:padding="24dp">
 
     <TextView
         android:id="@+id/questionText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/irish"
+        android:textColor="@color/white"
         android:text="Question"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/answer1Text"
+    <!-- Vertical LinearLayout for Answers -->
+    <LinearLayout
+        android:id="@+id/answerLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Answer1"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/questionText"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_marginTop="16dp">
 
-    <TextView
-        android:id="@+id/answer2Text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Answer2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/answer1Text"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <!-- First Row (Answer 1 and 2) -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/answer3Text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Answer3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/answer2Text"
-        app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                android:id="@+id/answer1Text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="8dp"
+                android:fontFamily="@font/irish"
+                android:text="Answer1"
+                android:textColor="@color/white"
+                android:gravity="center" />
 
-    <TextView
-        android:id="@+id/answer4Text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Answer4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/answer3Text"
-        app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                android:id="@+id/answer2Text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="8dp"
+                android:fontFamily="@font/irish"
+                android:text="Answer2"
+                android:textColor="@color/white"
+                android:gravity="center" />
+        </LinearLayout>
+
+        <!-- Second Row (Answer 3 and 4) -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/answer3Text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="8dp"
+                android:fontFamily="@font/irish"
+                android:text="Answer3"
+                android:textColor="@color/white"
+                android:gravity="center" />
+
+            <TextView
+                android:id="@+id/answer4Text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="8dp"
+                android:fontFamily="@font/irish"
+                android:text="Answer4"
+                android:textColor="@color/white"
+                android:gravity="center" />
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/correctAnswerText"
@@ -55,26 +92,31 @@
         android:layout_height="wrap_content"
         android:text="Correct Answer"
         android:textStyle="bold"
+        android:fontFamily="@font/irish"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/answer4Text"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/answerLayout"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/userSelectedAnswerText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Your Answer"
+        android:fontFamily="@font/irish"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/correctAnswerText"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/levelText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Level"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userSelectedAnswerText"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
